@@ -1,3 +1,7 @@
+2022-04-27  Robby Stephenson  <robby@periapsis.org>
+
+	* Fixed image path for exporting GCstar files (Bug 453075).
+
 2022-04-08  Robby Stephenson  <robby@periapsis.org>
 
 	* Updated CSV importer to remember column and row delimiter.
